Building test app to learn backbone basics

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,6 +11,13 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <button id="add-expense">Add Expense</button>
+        <ul id="expense-list"></ul>
+        
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+        <script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.4/underscore-min.js"></script>
+        <script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"></script>
+        <script src="./js/ExpenseModel.js"></script>
+        <script src="./js/AppView.js"></script>
     </body>
 </html>
